2014-04-27  Junichi Satoh <junichi@rworks.jp>

	* util/recon_scripts/snmp-recon.pl: Added support for FreeBSD.
	
2014-04-27  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/PluginServer.pm: Fixed plugin execution failure
	when multibyte characters are used in plugins macros.

2014-04-24  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Removed entities
	to events log.

2014-04-23  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm
	  util/pandora_manage.pl: Added functions
	to CLI.

2014-04-22  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_migrate_recon_scripts.pl
	lib/PandoraFMS/ReconServer.pm: Add compatibility for the new
	fields system (macros) of the recon scripts to the recon server.
	Add migrate script from old format to new one

2014-04-04  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Do not load MIB files (DISPLAY-HINTS may
	  cause MAC addresses to be displayed in a different format).

2014-04-04  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Lowered the number of retries.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Remove the symbolic labels from
	  enumeration values.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Fixed a typo.

2014-04-03  Koichiro KIKUCHI <koichiro@rworks.jp>

	* bin/tentacle_server: Updated to the logfile supported version.

2014-04-03  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Added to the repository. Recon SNMP L2
	  network scan script.

2014-03-31  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Execute more
	actions to snmp alerts.

2014-03-27  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Can change
	order in varbinds.

2014-03-20  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf.new,
	conf/pandora_server.conf.windows: Restart on mysql connection
	failure enabled by default.
