@@ -1,3 +1,8 @@
+2014-05-03  Junichi Satoh <junichi@rworks.jp>
+
+	* util/pandora_manage.pl: Added new CLI functions to manage special
+	days.
+
 2014-04-27  Junichi Satoh <junichi@rworks.jp>
 
 	* util/recon_scripts/snmp-recon.pl: Added support for FreeBSD.
